--- a/functions/users/index.yml
+++ b/functions/users/index.yml
@@ -18,7 +18,7 @@ update:
   handler: functions/users/update.update_user
   events:
     - http: 
-        path: user/update/{args}/{oid}
+        path: update/user/{args}/{oid}
         method: patch
         request:
           parameters: 
